<resources>
    <string name="app_name">TPROM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_name">Team name</string>
    <string name="create">Create</string>
    <string name="enter_your_">Enter your team name</string>
    <string name="description">Description</string>
    <string name="describe_ab">Describe about your team</string>
    <string name="role">Role</string>
    <string name="member">Member</string>
    <string name="group_name">Group Name</string>
    <string name="designing_a">Designing a abcxyz</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut...Read more</string>
    <string name="complete">Complete</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>